added dynamic, overridable quarters

--- a/demo.html
+++ b/demo.html
@@ -16,9 +16,9 @@
           <label>My Date</label>
           <quick-datepicker name='myDate' ng-model='myDate' required></quick-datepicker>
         </p>
-        <p>
-          <label>Some other field</label>
-          <input type='text' name='otherField' ng-model='otherField' required />
+          <p>
+          <label>My Date</label>
+          <quick-datepicker disable-quarter-buttons="false" name='myDate' ng-model='myDate' required></quick-datepicker>
         </p>
       </form>
       <br/>
